refactored, now to test
