# api/dish.go
@@ -2,25 +2,21 @@ package api
 
 import (
 	"errors"
-	"fmt"
-	"middleearth/eateries/cache"
-	"middleearth/eateries/data"
-	"middleearth/eateries/env"
+	"middleearth/eateries/service"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
-	"gorm.io/gorm"
 )
 
-type Dish struct {
+type createDishRequest struct {
 	Name         string `json:"name" binding:"required,min=3,max=20"`
 	Description  string `json:"description" binding:"required,min=3,max=200"`
 	Price        uint   `json:"price" binding:"required"`
 	RestaurantID string `json:"restaurantID" binding:"required"`
 }
 
-type UpdateDish struct {
+type updateDishRequest struct {
 	ID           string `json:"id" binding:"required,min=3,max=20"`
 	Name         string `json:"name" binding:"required,min=3,max=200"`
 	Description  string `json:"description" binding:"required"`
@@ -28,164 +24,224 @@ type UpdateDish struct {
 	RestaurantID string `json:"restaurantID" binding:"required"`
 }
 
+type dishResponse struct {
+	ID           string
+	Name         string
+	Description  string
+	Price        uint
+	RestaurantID string
+}
+
 type DishAPI struct {
-	Db    *gorm.DB
-	Cache *cache.DishCache
+	Service *service.DishService
 }
 
-func NewDishAPI(Db *gorm.DB, Cache *cache.DishCache) *DishAPI {
-	return &DishAPI{Db: Db, Cache: Cache}
+func NewDishAPI(Service *service.DishService) *DishAPI {
+	return &DishAPI{Service: Service}
 }
 
-// @BasePath /api/v1
-
-func (dishApi *DishAPI) CreateDish(c *gin.Context) {
-	restaurantID, err := GetRestaurantHeader(c)
+// CreateDish godoc
+// @Summary      Create a dish
+// @Description  create a dish
+// @Tags         dishes
+// @Accept       json
+// @Produce      json
+// @Param		 Authorization	header		string	true	"Authentication header"
+// @Param		 RestaurantID	header		string	true	"RestaurantID header"
+// @Param		 dish body    api.createDishRequest   true  "Create dish"
+// @Success      200  {object}   api.dishResponse
+// @Router       /dishes [post]
+func (dishApi *DishAPI) CreateDish(ginContext *gin.Context) {
+	restaurantID, err := GetRestaurantHeader(ginContext)
 	if err != nil {
-		c.IndentedJSON(http.StatusBadRequest, err)
+		ErrorResponse(err, ginContext)
 		return
 	}
-	var newDish Dish
-	if err := c.BindJSON(&newDish); err != nil {
-		fmt.Println("Validation error: ", err)
-		c.AbortWithStatusJSON(http.StatusBadRequest,
-			gin.H{
-				"error":   "VALIDATION ERROR",
-				"message": "Invalid inputs. Please check your inputs"})
-		return
-	}
-	dbDish := mapDishToDB(newDish)
-	result := dishApi.Db.Create(&dbDish)
-	fmt.Println("DB result error:", result.Error)
-	if env.CacheEnabled() {
-		dishApi.Cache.DeleteDishes(restaurantID)
-	}
-	c.IndentedJSON(http.StatusOK, newDish)
-}
-
-func (dishApi *DishAPI) UpdateDish(c *gin.Context) {
-	restaurantID, err := GetRestaurantHeader(c)
-	if err != nil {
-		c.IndentedJSON(http.StatusBadRequest, err)
-		return
-	}
-	var dish UpdateDish
-	if err := c.BindJSON(&dish); err != nil {
-		fmt.Printf("Bind error %s", err)
-		return
-	}
-	dbDish := mapUpdateDishToDB(dish)
-	result := dishApi.Db.Where("id = ? AND restaurant_id = ?", dbDish.ID, restaurantID).Save(&dbDish)
-	fmt.Printf("DB result error %s, rows %d", result.Error, result.RowsAffected)
-	if env.CacheEnabled() {
-		dishApi.Cache.DeleteDishes(restaurantID)
-	}
-	c.IndentedJSON(http.StatusOK, dbDish)
-}
-
-func (dishApi *DishAPI) DeleteDish(c *gin.Context) {
-	restaurantID, err := GetRestaurantHeader(c)
-	if err != nil {
-		c.IndentedJSON(http.StatusBadRequest, err)
-		return
-	}
-	id, _ := uuid.Parse(c.Param("id"))
-	var dish data.Dish
-	result := dishApi.Db.Where("id = ? AND restaurant_id = ?", id, restaurantID).First(&dish)
-	if errors.Is(result.Error, gorm.ErrRecordNotFound) {
-		c.IndentedJSON(http.StatusNotFound, gin.H{"message": "Dish not found"})
+	var request createDishRequest
+	if err := ginContext.BindJSON(&request); err != nil {
+		ErrorResponse(err, ginContext)
 		return
 	}
 
-	// TODO: Use db transactions
-
-	// delete associated ratings first
-	dishApi.Db.Where("dish_id = ?", dish.ID).Delete(&data.Rating{})
-
-	deleteResult := dishApi.Db.Delete(&dish)
-	if deleteResult.Error != nil {
-		fmt.Println("ERROR: Deleting Dish: ", deleteResult.Error)
-		c.IndentedJSON(http.StatusBadRequest, gin.H{"message": "Error deleting dish"})
+	jsonID, _ := uuid.Parse(request.RestaurantID)
+	validationErr := validateRestaurantID(restaurantID, jsonID)
+	if validationErr != nil {
+		ErrorResponse(validationErr, ginContext)
 		return
 	}
-	if env.CacheEnabled() {
-		dishApi.Cache.DeleteDishes(restaurantID)
-	}
-	c.IndentedJSON(http.StatusOK, id)
-}
 
-func (dishApi *DishAPI) GetDish(c *gin.Context) {
-	restaurantID, err := GetRestaurantHeader(c)
-	if err != nil {
-		c.IndentedJSON(http.StatusBadRequest, err)
-		return
-	}
-	id := c.Param("id")
-	var dish data.Dish
-	result := dishApi.Db.Where("id = ? AND restaurant_id = ?", id, restaurantID).First(&dish)
-	if errors.Is(result.Error, gorm.ErrRecordNotFound) {
-		c.IndentedJSON(http.StatusNotFound, gin.H{"message": "Dish not found"})
-		return
-	}
-	c.IndentedJSON(http.StatusOK, dish)
-}
-
-func (dishApi *DishAPI) ListDish(c *gin.Context) {
-	restaurantID, err := GetRestaurantHeader(c)
-	if err != nil {
-		c.IndentedJSON(http.StatusBadRequest, err)
-		return
-	}
-	var dishes []data.Dish
-	if env.CacheEnabled() {
-		dishes, err := dishApi.Cache.GetDishes(restaurantID)
-		if dishes == nil {
-			fmt.Println("Getting dishes from DATABASE:", err)
-			dishApi.Db.Where("restaurant_id = ?", restaurantID).Find(&dishes)
-			dishApi.Cache.AddDishes(restaurantID, dishes)
-		}
-		c.IndentedJSON(http.StatusOK, mapDishesToJSON(dishes))
-		return
-	}
-	dishApi.Db.Find(&dishes)
-	c.IndentedJSON(http.StatusOK, mapDishesToJSON(dishes))
-}
-
-func mapDishToDB(dish Dish) data.Dish {
-	restaurantID, _ := uuid.Parse(dish.RestaurantID)
-	return data.Dish{
-		Name:         dish.Name,
-		Description:  dish.Description,
-		Price:        dish.Price,
+	// map to dish action
+	action := service.CreateDishAction{
+		Name:         request.Name,
+		Description:  request.Description,
+		Price:        request.Price,
 		RestaurantID: restaurantID,
 	}
+
+	result, err := dishApi.Service.CreateDish(restaurantID, action)
+	if err != nil {
+		ErrorResponse(err, ginContext)
+		return
+	}
+
+	response := mapToDishResponse(*result)
+
+	ginContext.IndentedJSON(http.StatusOK, response)
 }
 
-func mapUpdateDishToDB(dish UpdateDish) data.Dish {
-	restaurantID, _ := uuid.Parse(dish.RestaurantID)
-	dishID, _ := uuid.Parse(dish.ID)
-	return data.Dish{
-		ID:           dishID,
-		Name:         dish.Name,
-		Description:  dish.Description,
-		Price:        dish.Price,
+// UpdateDish godoc
+// @Summary      Update a dish
+// @Description  updated a dish
+// @Tags         dishes
+// @Accept       json
+// @Produce      json
+// @Param		 Authorization	header		string	true	"Authentication header"
+// @Param		 RestaurantID	header		string	true	"RestaurantID header"
+// @Param		 dish body    api.updateDishRequest   true  "Update dish"
+// @Success      200  {object}   api.dishResponse
+// @Router       /dishes [patch]
+func (dishApi *DishAPI) UpdateDish(ginContext *gin.Context) {
+
+	restaurantID, err := GetRestaurantHeader(ginContext)
+	if err != nil {
+		ErrorResponse(err, ginContext)
+		return
+	}
+	var request updateDishRequest
+	if err := ginContext.BindJSON(&request); err != nil {
+		ErrorResponse(err, ginContext)
+		return
+	}
+
+	jsonID, _ := uuid.Parse(request.RestaurantID)
+	validationErr := validateRestaurantID(restaurantID, jsonID)
+	if validationErr != nil {
+		ErrorResponse(validationErr, ginContext)
+		return
+	}
+
+	// map to dish action
+	action := service.UpdateDishAction{
+		Name:         request.Name,
+		Description:  request.Description,
+		Price:        request.Price,
 		RestaurantID: restaurantID,
 	}
+
+	result, err := dishApi.Service.UpdateDish(restaurantID, action)
+	if err != nil {
+		ErrorResponse(err, ginContext)
+		return
+	}
+
+	response := mapToDishResponse(*result)
+
+	ginContext.IndentedJSON(http.StatusOK, response)
 }
 
-func mapDishesToJSON(dishes []data.Dish) []Dish {
-	var result []Dish
+// DeleteDish godoc
+// @Summary      Delete a dish
+// @Description  delete a dish
+// @Tags         dishes
+// @Accept       json
+// @Produce      json
+// @Param		 Authorization	header		string	true	"Authentication header"
+// @Param		 RestaurantID	header		string	true	"RestaurantID header"
+// @Param		 id	path		string		true	"Dish ID"
+// @Success      200
+// @Router       /dishes [delete]
+func (dishApi *DishAPI) DeleteDish(ginContext *gin.Context) {
+	restaurantID, err := GetRestaurantHeader(ginContext)
+	if err != nil {
+		ErrorResponse(err, ginContext)
+		return
+	}
+	id := ginContext.Param("id")
+	dishID, _ := uuid.Parse(id)
+
+	deleteError := dishApi.Service.DeleteDish(restaurantID, dishID)
+	if deleteError != nil {
+		ErrorResponse(deleteError, ginContext)
+		return
+	}
+
+	ginContext.IndentedJSON(http.StatusOK, gin.H{
+		"id": id,
+	})
+}
+
+// GetDish godoc
+// @Summary      Get a dish
+// @Description  get a dish
+// @Tags         dishes
+// @Accept       json
+// @Produce      json
+// @Param		 RestaurantID	header		string	true	"RestaurantID header"
+// @Param		 id	path		string		true	"Dish ID"
+// @Success      200  {object}   api.dishResponse
+// @Router       /dishes/:id [get]
+func (dishApi *DishAPI) GetDish(ginContext *gin.Context) {
+	restaurantID, err := GetRestaurantHeader(ginContext)
+	if err != nil {
+		ErrorResponse(err, ginContext)
+		return
+	}
+	id := ginContext.Param("id")
+	dishID, _ := uuid.Parse(id)
+	retrievedDish, err := dishApi.Service.GetDish(restaurantID, dishID)
+	if err != nil {
+		ErrorResponse(err, ginContext)
+		return
+	}
+	response := mapToDishResponse(*retrievedDish)
+	ginContext.IndentedJSON(http.StatusOK, response)
+}
+
+// ListDishes godoc
+// @Summary      List dishes
+// @Description  list dishes
+// @Tags         dishes
+// @Accept       json
+// @Produce      json
+// @Param		 RestaurantID	header		string	true	"RestaurantID header"
+// @Success      200  {array}   api.dishResponse
+// @Router       /dishes [get]
+func (dishApi *DishAPI) ListDishes(ginContext *gin.Context) {
+	restaurantID, err := GetRestaurantHeader(ginContext)
+	if err != nil {
+		ErrorResponse(err, ginContext)
+		return
+	}
+	dishes, err := dishApi.Service.ListDishes(restaurantID)
+	if err != nil {
+		ErrorResponse(err, ginContext)
+		return
+	}
+
+	// map []service.DishResult to []api.dishResponse
+	var response []dishResponse
 	for _, dish := range dishes {
-		result = append(result, mapDishToJSON(dish))
+		response = append(response, mapToDishResponse(dish))
 	}
-	return result
+	ginContext.IndentedJSON(http.StatusOK, response)
 }
 
-func mapDishToJSON(dish data.Dish) Dish {
-	return Dish{
-		Name:         dish.Name,
-		Description:  dish.Description,
-		Price:        dish.Price,
-		RestaurantID: dish.RestaurantID.String(),
+// Maps service.DishResult to api.dishResponse
+func mapToDishResponse(result service.DishResult) dishResponse {
+	return dishResponse{
+		ID:           result.ID.String(),
+		Name:         result.Name,
+		Description:  result.Description,
+		Price:        result.Price,
+		RestaurantID: result.RestaurantID.String(),
 	}
+}
+
+// Validates the restaurant ids used in header and json payload.
+// Checks that they are equal and returns an error
+func validateRestaurantID(headerID uuid.UUID, jsonID uuid.UUID) error {
+	if headerID != jsonID {
+		return errors.New("invalid restaurant id")
+	}
+	return nil
 }
